MJ 22/01/2005
- Moved the wiring algorithm from WireScaleFreeBA to GraphFactory
  and added the possibility to generate an undirected version.
  Also, some pretty printing changes on some wiring classes.

AM 19/01/2005
- Fixed a bug in ClassFinder, that was preventing it to run on
  Windows.
- Added a mechanism for running a class that implements both
  the CDProtocol and EDProtocol interface just as an EDProtocol.
- Now the prototype node has an index of -1 (to avoid confusion
  with node with index 0)

MJ 09/01/2005
- Fixed a bug in PeakDistribution: it did not initialize as many nodes
  as the number of peaks. Eg with one peak, one node is not initialized.

MJ 06/01/2005
VERSION 0.3 RELEASED
------------------------------------------------------------------
------------------------------------------------------------------

MJ 04/01/2005
- Minor changes to make some docs consistent with actual behavior and
  vice versa

AM 02/01/2005
- Added the "pack" parameter (originally included in WireRegularRandom)
  to all the Wire* classes. When this parameter is present, the pack()
  method is called over the initialized protocol after all links have
  been wired.

MJ 02/01/2005
- Fixed bug in WireScaleFreeBA: it ocasionally generated loop edges and in
  general did not follow the BA model.

AM 30/12/2004
- Modified Makefile to remove "distributions" from the list of
  packages that are inserted in the distribution.

AM 30/12/2004
- Modified aggregation to use to the new vector package. All the
  implementation now use double instead of float.

MJ 30/12/2004
- Refactoring of classes that have to do with vector-like operations
  on an array of values, where each element of the array is stored
  by an instance of a SingleValue protocol. A new package called
  peersim.vector was created and everything is moved there.
- New classes dealing with vectors (see above) are added such as
  observers and dynamics, into package peersim.vector.

MJ 27/12/2004